--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,8 +21,9 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile project(':pages')
     compile project(':photoview')
+    compile project(':filelistgetter')
 }
