--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,17 +13,16 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".FileListActivity"
-            android:label="@string/title_activity_file_list" >
+            android:label="@string/title_activity_file_list"
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".PdfViewActivity"
-            android:label="@string/title_activity_pdf_view"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+            android:label="@string/title_activity_pdf_view">
         </activity>
     </application>
 
